--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "notiflix": "^3.0.1",
-    "tui-pagination": "^3.4.1"
+    "tui-pagination": "^3.4.1",
+    "use-lodash-debounce": "^1.1.0"
   }
 }
