--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "basiclightbox": "^5.0.4",
     "notiflix": "^3.0.1",
     "spin.js": "^4.1.0",
     "tui-pagination": "^3.4.1",
